# rpapy

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  requiriments.txt  setup.py
resources/: custom_keywords.py  keywords.robot
resources/desenhos/: borboleta.txt  robotframework.txt
rpapy/: __init__.py  __main__.py  activities.py
rpapy/.UserSnippetsVsCode/: python.json  robot.json
rpapy/core/: __init__.py  activities.py  config.py  image_mapper.py  loads.py  localizador.py  locator.py  prepare_text.py  screenshots.py  templates.py  uploads.py
rpapy/core/snipps/: __init__.py  codesnippets.py  loads.py  snippingtools.py  templates.py
rpapy/core/utils/: __init__.py  messages.py  templates.py
rpapy/core/utils/example/: paint_robot.py
tests/: main.robot
